# ChangeLog for sys-devel/distcc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/distcc/ChangeLog,v 1.234 2014/05/12 11:36:29 ssuominen Exp $

  12 May 2014; Samuli Suominen <ssuominen@gentoo.org> distcc-2.18.3-r10.ebuild,
  distcc-3.0-r4.ebuild:
  Convert from EAPI 1 to 5 as 1 is declared obsolete and will go away.

  19 Jan 2014; Mike Frysinger <vapier@gentoo.org> distcc-3.1-r9.ebuild,
  distcc-3.2_rc1.ebuild:
  Add arm64 love.

  19 Jan 2014; Mike Frysinger <vapier@gentoo.org> distcc-3.1-r9.ebuild:
  Mark m68k/s390/sh stable.

  23 Dec 2013; Mike Frysinger <vapier@gentoo.org> distcc-3.1-r9.ebuild:
  Mark alpha/ia64/ppc/ppc64/sparc stable #480112.

  07 Dec 2013; Pacho Ramos <pacho@gentoo.org> distcc-3.1-r9.ebuild:
  x86 stable, bug #480112

  19 Oct 2013; Pacho Ramos <pacho@gentoo.org> distcc-3.1-r9.ebuild:
  amd64 stable, bug #480112

  08 Oct 2013; Markus Meier <maekke@gentoo.org> distcc-3.1-r9.ebuild:
  arm stable, bug #480112

  06 Oct 2013; Jeroen Roovers <jer@gentoo.org> distcc-3.1-r9.ebuild:
  Stable for HPPA (bug #480112).

*distcc-3.1-r9 (21 Sep 2013)

  21 Sep 2013; Pacho Ramos <pacho@gentoo.org> +distcc-3.1-r9.ebuild,
  +files/distccd.service.conf, -distcc-3.1-r8.ebuild, distcc-3.2_rc1.ebuild,
  files/distccd.service:
  Stop relying in conf.d file, fix zeroconf handling (#480386 by Malte
  Starostik)

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> distcc-3.1-r7.ebuild,
  distcc-3.1-r8.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  20 Jul 2013; Pacho Ramos <pacho@gentoo.org> +files/distccd.service:
  Commit missing file (#477512 by Xavier Miller)

*distcc-3.1-r8 (20 Jul 2013)

  20 Jul 2013; Pacho Ramos <pacho@gentoo.org> +distcc-3.1-r8.ebuild,
  +files/3.1/conf:
  Install unit file (#470848)

  12 Feb 2013; Raúl Porcel <armin76@gentoo.org> distcc-3.1-r7.ebuild,
  distcc-3.2_rc1.ebuild:
  Add ~m68k

  08 Feb 2013; Justin Lecher <jlec@gentoo.org> distcc-3.1-r7.ebuild: